# shit-coin

./: .gitignore  CMakeLists.txt  Makefile  NetworkListener.cpp  NetworkListener.d  NetworkListener.h  README.md  main  main.cpp  main.d
include/p2p/: peers.hpp
include/p2p/net/: NetworkTypes.hpp  dispatcher.hpp  listener.hpp  node.hpp  packets.hpp  peers.hpp  scopedsocket.hpp
peers/: clients.csv
src/: main.cpp
src/p2p/: peers.cpp
src/p2p/net/: dispatcher.cpp  listener.cpp  node.cpp  packets.cpp  peers.cpp  scopedsocket.cpp
src/p2p/peers/: master_clients.csv
